saint-lascivious.github.io: update sitemap action hook
Changes to be committed:
 - modified:   .github/workflows/sitemap-generation.yml

--- a/.github/workflows/sitemap-generation.yml
+++ b/.github/workflows/sitemap-generation.yml
@@ -3,7 +3,7 @@ name: generate xml sitemap
 on:
   push:
     branches: [ master ]
-    paths: [ '**.html' ]
+    paths: [ '**.html', '**.txt' ]
 
 jobs:
   sitemap_job:
