--- a/.github/workflows/sitemap-generation.yml
+++ b/.github/workflows/sitemap-generation.yml
@@ -12,13 +12,14 @@ jobs:
 
     steps:
     - name: checkout repo
-      uses: actions/checkout@v2
+      id: cr
+      uses: actions/checkout@v3.3.0
       with:
         fetch-depth: 0
 
     - name: generate sitemap
-      id: sitemap
-      uses: cicirello/generate-sitemap@v1
+      id: gs
+      uses: cicirello/generate-sitemap@v1.9.1
       with:
         base-url-path: https://sainternet.xyz/
 
@@ -29,7 +30,8 @@ jobs:
         echo "excluded-count = ${{ steps.sitemap.outputs.excluded-count }}"
 
     - name: create pull request
-      uses: peter-evans/create-pull-request@v3
+      id: cpr
+      uses: peter-evans/create-pull-request@v4.2.3
       with:
         title: "automated sitemap update"
         body: >
