--- a/.github/workflows/sitemap-generation.yml
+++ b/.github/workflows/sitemap-generation.yml
@@ -5,15 +5,21 @@ on:
     branches: [ master ]
     paths: [ '**.html' ]
 
+permissions: {}
+
 jobs:
   sitemap_job:
+    permissions:
+      contents: read
+      pull-requests: write
+
     runs-on: ubuntu-latest
     name: generate a sitemap
 
     steps:
     - name: checkout repo
       id: cr
-      uses: actions/checkout@v3.3.0
+      uses: actions/checkout@v3.5.2
       with:
         fetch-depth: 0
 
@@ -31,7 +37,7 @@ jobs:
 
     - name: create pull request
       id: cpr
-      uses: peter-evans/create-pull-request@v4.2.3
+      uses: peter-evans/create-pull-request@v5.0.0
       with:
         title: "automated sitemap update"
         body: >
