--- a/.github/workflows/sitemap-generation.yml
+++ b/.github/workflows/sitemap-generation.yml
@@ -11,25 +11,25 @@ jobs:
     name: generate a sitemap
 
     steps:
-    - name: checkout repo
+   &nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;name: checkout repo
       id: cr
       uses: actions/checkout@v3.3.0
       with:
         fetch-depth: 0
 
-    - name: generate sitemap
+   &nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;name: generate sitemap
       id: gs
       uses: cicirello/generate-sitemap@v1.9.1
       with:
         base-url-path: https://sainternet.xyz/
 
-    - name: output stats
+   &nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;name: output stats
       run: |
         echo "sitemap-path = ${{ steps.sitemap.outputs.sitemap-path }}"
         echo "url-count = ${{ steps.sitemap.outputs.url-count }}"
         echo "excluded-count = ${{ steps.sitemap.outputs.excluded-count }}"
 
-    - name: create pull request
+   &nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;name: create pull request
       id: cpr
       uses: peter-evans/create-pull-request@v4.2.3
       with:
